force-app/main/default/objects/Asset_Vici__c/Asset_Vici__c.object-meta.xml
<CustomObject>
    <label>Asset Vici</label>
    <nameField>
        <label>Matricola</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Vici</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>