force-app/main/default/objects/Asset_Vici__c/fields/Accessori__c.field-meta.xml
<CustomField>
    <fullName>Accessori__c</fullName>
    <label>Accessori</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>