force-app/main/default/objects/Asset_Vici__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Billing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Vici (Account)</relationshipLabel>
    <relationshipName>Asset_Vici</relationshipName>
    <type>Lookup</type>
</CustomField>