force-app/main/default/objects/Asset_Vici__c/fields/Account_Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Final Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Vici (Account Final Customer)</relationshipLabel>
    <relationshipName>Asset_Vici1</relationshipName>
    <type>Lookup</type>
</CustomField>