force-app/main/default/objects/Asset_Vici__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Asset Vici</relationshipLabel>
    <relationshipName>Asset_Vici</relationshipName>
    <type>Lookup</type>
</CustomField>