force-app/main/default/objects/Asset_Vici__c/fields/Cliente_Fatturazione__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Fatturazione__c</fullName>
    <label>Cliente Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>