force-app/main/default/objects/Asset_Vici__c/fields/Cliente_utilizzatore__c.field-meta.xml
<CustomField>
    <fullName>Cliente_utilizzatore__c</fullName>
    <label>Cliente utilizzatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>