force-app/main/default/objects/Asset_Vici__c/fields/Codice_Asset__c.field-meta.xml
<CustomField>
    <fullName>Codice_Asset__c</fullName>
    <formula>Modello_Macchina__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Asset</label>
    <type>Text</type>
</CustomField>