force-app/main/default/objects/Asset_Vici__c/fields/Data_consegna__c.field-meta.xml
<CustomField>
    <fullName>Data_consegna__c</fullName>
    <label>Data consegna</label>
    <type>Date</type>
</CustomField>