force-app/main/default/objects/Asset_Vici__c/fields/Data_consegna_cliente__c.field-meta.xml
<CustomField>
    <fullName>Data_consegna_cliente__c</fullName>
    <description>Importato da FileMaker</description>
    <label>Data consegna</label>
    <type>Date</type>
</CustomField>