force-app/main/default/objects/Asset_Vici__c/fields/Data_di_consegna__c.field-meta.xml
<CustomField>
    <fullName>Data_di_consegna__c</fullName>
    <label>Data di consegna richiesta</label>
    <type>Date</type>
</CustomField>