force-app/main/default/objects/Asset_Vici__c/fields/Data_macchina_pronta__c.field-meta.xml
<CustomField>
    <fullName>Data_macchina_pronta__c</fullName>
    <description>Importato da FileMaker</description>
    <label>Data macchina pronta</label>
    <type>Date</type>
</CustomField>