force-app/main/default/objects/Asset_Vici__c/fields/Data_scadenza_garanzia__c.field-meta.xml
<CustomField>
    <fullName>Data_scadenza_garanzia__c</fullName>
    <label>Data scadenza garanzia (importato)</label>
    <type>Date</type>
</CustomField>