force-app/main/default/objects/Asset_Vici__c/fields/Data_ultima_calibrazione_Vici__c.field-meta.xml
<CustomField>
    <fullName>Data_ultima_calibrazione_Vici__c</fullName>
    <label>Data ultima calibrazione Vici</label>
    <type>Date</type>
</CustomField>