force-app/main/default/objects/Asset_Vici__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Dealer, Segnalatore</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Vici (Dealer)</relationshipLabel>
    <relationshipName>Asset_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>