force-app/main/default/objects/Asset_Vici__c/fields/Garanzia_attiva__c.field-meta.xml
<CustomField>
    <fullName>Garanzia_attiva__c</fullName>
    <formula>IF ( TODAY()&lt;   Warranty_Expiration__c  , 1,0)</formula>
    <label>Garanzia attiva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>