force-app/main/default/objects/Asset_Vici__c/fields/Indirizzo_di_spedizione__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_di_spedizione__c</fullName>
    <label>Indirizzo di spedizione</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>