force-app/main/default/objects/Asset_Vici__c/fields/License_Activation_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>License_Activation_Date_Roll_Up__c</fullName>
    <description>Prendo da relativo License Activation con Roll-Up summary, la data come il massimo nel caso ci siano più relativi in maniera errata (PS inLicense Activation messo AssetVici come Detail-Master reletionship)</description>
    <label>License Activation Date</label>
    <summarizedField>AssetActivationRegisterSQLite__c.ActivationDate__c</summarizedField>
    <summaryForeignKey>AssetActivationRegisterSQLite__c.Asset_Vici__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>