force-app/main/default/objects/Asset_Vici__c/fields/Matricola__c.field-meta.xml
<CustomField>
    <fullName>Matricola__c</fullName>
    <externalId>true</externalId>
    <label>Matricola</label>
    <length>50</length>
    <type>Text</type>
</CustomField>