force-app/main/default/objects/Asset_Vici__c/fields/Mesi_dalla_data_di_installazione__c.field-meta.xml
<CustomField>
    <fullName>Mesi_dalla_data_di_installazione__c</fullName>
    <formula>IF(ISPICKVAL( Tipo_di_garanzia__c , &quot;24 mesi&quot;), 24, 12)</formula>
    <label>Mesi dalla data di installazione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>