force-app/main/default/objects/Asset_Vici__c/fields/Modello__c.field-meta.xml
<CustomField>
    <fullName>Modello__c</fullName>
    <label>Modello</label>
    <length>255</length>
    <type>Text</type>
</CustomField>