force-app/main/default/objects/Asset_Vici__c/fields/Modello_Macchina__c.field-meta.xml
<CustomField>
    <fullName>Modello_Macchina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Codice Macchina</label>
    <referenceTo>Modello_Macchina__c</referenceTo>
    <relationshipLabel>Asset Vici</relationshipLabel>
    <relationshipName>Asset_Vici</relationshipName>
    <type>Lookup</type>
</CustomField>