force-app/main/default/objects/Asset_Vici__c/fields/Note_di_Variazione__c.field-meta.xml
<CustomField>
    <fullName>Note_di_Variazione__c</fullName>
    <label>Note di Variazione</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>