force-app/main/default/objects/Asset_Vici__c/fields/Nr_Cartellino__c.field-meta.xml
<CustomField>
    <fullName>Nr_Cartellino__c</fullName>
    <externalId>true</externalId>
    <label>Nr Cartellino</label>
    <length>50</length>
    <type>Text</type>
</CustomField>