force-app/main/default/objects/Asset_Vici__c/fields/Opportunita__c.field-meta.xml
<CustomField>
    <fullName>Opportunita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunità</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Asset Vici</relationshipLabel>
    <relationshipName>Asset_Vici</relationshipName>
    <type>Lookup</type>
</CustomField>