force-app/main/default/objects/Asset_Vici__c/fields/Schema_elettrico__c.field-meta.xml
<CustomField>
    <fullName>Schema_elettrico__c</fullName>
    <label>Schema elettrico</label>
    <length>100</length>
    <type>Text</type>
</CustomField>