force-app/main/default/objects/Asset_Vici__c/fields/Software_version__c.field-meta.xml
<CustomField>
    <fullName>Software_version__c</fullName>
    <description>Actual sw version installed</description>
    <label>Software Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>