force-app/main/default/objects/Asset_Vici__c/fields/Status_garanzia__c.field-meta.xml
<CustomField>
    <fullName>Status_garanzia__c</fullName>
    <formula>IMAGE(
IF(Garanzia_attiva__c = 1, &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;),
&quot;priority flag&quot;)</formula>
    <label>Status garanzia</label>
    <type>Text</type>
</CustomField>