force-app/main/default/objects/Asset_Vici__c/fields/Tipo_di_garanzia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_garanzia__c</fullName>
    <label>Tipo di garanzia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Demo unit</fullName>
            </value>
            <value>
                <fullName>24 mesi</fullName>
                <label>24 months</label>
            </value>
            <value>
                <fullName>36 mesi</fullName>
                <label>36 months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>