force-app/main/default/objects/Asset_Vici__c/fields/Warranty_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration__c</fullName>
    <formula>ADDMONTHS(License_Activation_Date_Roll_Up__c,
IF( TEXT(Tipo_di_garanzia__c)=&quot;24 mesi&quot;,24, IF( TEXT(Tipo_di_garanzia__c)=&quot;36 mesi&quot;,36,12))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Expiration</label>
    <type>Date</type>
</CustomField>